--- a/public_html/s2s_factory_v1.html
+++ b/public_html/s2s_factory_v1.html
@@ -41,7 +41,7 @@
 			-webkit-box-align: center;
 			-moz-box-align: center;
 			box-align: center;
-			color: #003D6E;
+			color: #606E7A;
 			text-align: center;
 			cursor: pointer;
 		}
@@ -68,6 +68,7 @@
 	<script src="js/shopfloorPerson.js"></script>
 	<script src="js/recyclingBin.js"></script>
 	<script src="js/shelving.js"></script>
+	<script src="js/officeMan.js"></script>
 
 	<div id="blocker">
 
@@ -203,10 +204,11 @@
 		/*List of all Persons as a custom object, see person.js*/
 		var factoryPersons = [];
 		var shopfloorPersons = [];
+		var OfficeMen =[];
 		/*List of all Forklifts as a custom object, see forklift.js*/
 		var factoryForklifts = [];
 
-		var factoryBleuShelving = [];
+		var factoryBlueShelving = [];
 
 		var factoryrecyclingBins = [];
 		/*List of all cubes as THREE.Mesh*/
@@ -228,10 +230,10 @@
 			scene.add(newShelf.three_obj);
 			factoryShelving.push(newShelf);
 		}
-		//NOTE human json figure from blender. Use of this figure requires CREDIT to be given to tweediez
-		function addNewOfficePerson(ps) {
-			scene.add(ps.object);
-			objects.push(ps.object);
+		//NOTE human json figure from blender and MakeHuman.org. KvL
+		function addNewOfficeMan(oMan) {
+			scene.add(oMan.object);
+			objects.push(oMan.object);
 			//factoryPerson.push(ps);
 			//console.log('Person: - ' + person.id + '-, has been added');
 
@@ -426,10 +428,39 @@
 					createRecycleBin(-12 * meter, 0, 10 * meter, 0, '0_bin1', addNewrecycleBin);
 					createRecycleBin(-14 * meter, 0, 10 * meter, 0, '0_bin1', addNewrecycleBin);
 					createRecycleBin(-16 * meter, 0, 10 * meter, 0, '0_bin1', addNewrecycleBin);
-					createShopFloorPerson(-10 * meter, 0, 13 * meter, 0, '0_shopfloorpersonBin1', addNewShopFloorPerson);
+					createShopFloorPerson(-10 * meter, 0, 13.5 * meter, 0, '0_shopfloorBluemanBin1', addNewShopFloorPerson);
 
+
+					//NOTE CAN ONLY BE ADDED WHERE THERE ARE NO UPSTAIRS OR IT CAUSES A CLASH (uniforms.specular.value = material.specular;) shelving
+					// stores - not secure, top wall 3 shelves.
+					createBlueShelving(12.2 * meter,0, 32.2 *meter, 0, '0_blueshelftest', addNewBlueShelving);
+					createBlueShelving(12.2 * meter,0, 35.2 *meter, 0, '0_blueshelftest', addNewBlueShelving);
+					createBlueShelving(12.2 * meter,0, 38.2 *meter, 0, '0_blueshelftest', addNewBlueShelving);
+					// stores - not secure, outer wall
+					createBlueShelving(10 * meter,0, 40 *meter, (-Math.PI / 2), '0_blueshelftest', addNewBlueShelving);
+					createBlueShelving(7* meter,0, 40 *meter, (-Math.PI / 2), '0_blueshelftest', addNewBlueShelving);
+					createBlueShelving(4 * meter,0, 40 *meter, (-Math.PI / 2), '0_blueshelftest', addNewBlueShelving);
+					createBlueShelving(1 * meter,0, 40 *meter, (-Math.PI / 2), '0_blueshelftest', addNewBlueShelving);
+					createBlueShelving(-2 * meter,0, 40 *meter, (-Math.PI / 2), '0_blueshelftest', addNewBlueShelving);
+					createBlueShelving(-5 * meter,0, 40 *meter, (-Math.PI / 2), '0_blueshelftest', addNewBlueShelving);
+					// stores - not secure,centre shelving racks
+					createBlueShelving(9 * meter,0, 32.2 *meter, 0, '0_blueshelftest', addNewBlueShelving);
+					createBlueShelving(9 * meter,0, 35.2 *meter, 0, '0_blueshelftest', addNewBlueShelving);
+					createBlueShelving(6 * meter,0, 32.2 *meter, 0, '0_blueshelftest', addNewBlueShelving);
+					createBlueShelving(6 * meter,0, 35.2 *meter, 0, '0_blueshelftest', addNewBlueShelving);
+					createBlueShelving(3 * meter,0, 32.2 *meter, 0, '0_blueshelftest', addNewBlueShelving);
+					createBlueShelving(3 * meter,0, 35.2 *meter, 0, '0_blueshelftest', addNewBlueShelving);
+					createBlueShelving(0 * meter,0, 32.2 *meter, 0, '0_blueshelftest', addNewBlueShelving);
+					createBlueShelving(0 * meter,0, 35.2 *meter, 0, '0_blueshelftest', addNewBlueShelving);
+					//stores - not secure,shelving to right of door
+					createBlueShelving(-5 * meter,0, 32.2 *meter, (-Math.PI / 2), '0_blueshelftest', addNewBlueShelving);
+
+					//stores secure cage
+					createBlueShelving(-9.2 * meter,0, 40 *meter, (-Math.PI / 2), '0_blueshelftest', addNewBlueShelving);
+					createBlueShelving(-12.2 * meter,0, 40 *meter, (-Math.PI / 2), '0_blueshelftest', addNewBlueShelving);
+					createBlueShelving(-15.2 * meter,0, 40 *meter, (-Math.PI / 2), '0_blueshelftest', addNewBlueShelving);
 					//shopfloor person refurbRoom
-					createOfficePerson(-29 * meter, 0, 6 * meter, 0, '0_person1', addNewOfficePerson);
+					//createOfficePerson(-29 * meter, 0, 6 * meter, 0, '0_person1', addNewOfficePerson);
 					createShopFloorPerson(-25 * meter, 0, 6 * meter, 0, '0_shopfloorperson1', addNewShopFloorPerson);
 
 					//blue shelving refurbRoom
@@ -456,6 +487,8 @@
 					createToilet(-20.5 * meter, 0, 33.5 * meter, (-Math.PI), '0_toiletlobby5', addNewToilet);
 					createToilet(-21.5 * meter, 0, 33.5 * meter, (-Math.PI), '0_toiletlobby6', addNewToilet);
 
+					//first floor characters
+					createOfficeMan(-25 * meter, 3.3* meter, 4* meter, 0, '0_officeMan_Manager1', addNewOfficeMan);
 
 					renderer = new THREE.WebGLRenderer();
 					renderer.setClearColor(0xffffff);
