--- a/public_html/s2s_factory_v1.html
+++ b/public_html/s2s_factory_v1.html
@@ -69,6 +69,19 @@
 	<script src="js/recyclingBin.js"></script>
 	<script src="js/shelving.js"></script>
 	<script src="js/officeMan.js"></script>
+	<script src="js/OfficeFemale.js"></script>
+<script src="js/ShopfloorFem.js"></script>
+<script src="js/shopfloorAltMan.js"></script>
+<script src = "js/sfDesk.js"></script>
+<script src="js/urinal.js"></script>
+<script src="js/workstationPC.js"></script>
+<script src="js/officeDeskPC.js"></script>
+<script src = "js/standingGreySuit.js"></script>
+<script src ="js/sfDeskBeard.js"></script>
+<script src ="js/officedeskOccupied.js"></script>
+<script src ="js/officedeskOccupiedFem.js"></script>
+<script src ="js/van.js"></script>
+<script src ="js/shelvingBox.js"></script>
 
 	<div id="blocker">
 
@@ -200,11 +213,17 @@
 
 		/*List of all workstations as a custom object, see workstation.js*/
 		var factoryWorkstations = [];
+		var factoryWorkstationPCs = [];
+		var officedeskwithPCs = [];
 
-		/*List of all Persons as a custom object, see person.js*/
+		/*List of all Persons as a custom objects*/
 		var factoryPersons = [];
 		var shopfloorPersons = [];
 		var OfficeMen =[];
+			var OfficeFems =[];
+				var ShopfloorFems = [];
+					var shopfloorAltMen = [];
+					var greySuits = [];
 		/*List of all Forklifts as a custom object, see forklift.js*/
 		var factoryForklifts = [];
 
@@ -230,6 +249,56 @@
 			scene.add(newShelf.three_obj);
 			factoryShelving.push(newShelf);
 		}
+
+		function addNewStationPC(wsPC) {
+			scene.add(wsPC.object);
+			objects.push(wsPC.object);
+			factoryWorkstations.push(wsPC);
+			console.log('WorkstationPC: -' + wsPC.id + '-, has been added');
+
+			var newShelfPC = createShelf(wsPC, wsPC.id);
+			scene.add(newShelf.three_obj);
+			factoryShelving.push(newShelfPC);
+		}
+		function addNewsfdeskBeard(sfDB) {
+			scene.add(sfDB.object);
+			objects.push(sfDB.object);
+			factoryWorkstations.push(sfDB);
+			console.log('Workstation: -' + sfDB.id + '-, has been added');
+
+			var newShelf = createShelf(sfDB, sfDB.id);
+			scene.add(newShelf.three_obj);
+			factoryShelving.push(newShelf);
+		}
+
+		//NOTE KvL person blender model credits not required!
+		function addNewsfdesk(sfD) {
+			scene.add(sfD.object);
+			objects.push(sfD.object);
+
+		}
+		//NOTE desk json figure  blender  KvL
+		function addNewOfficeDeskPC(oDpc) {
+			scene.add(oDpc.object);
+			objects.push(oDpc.object);
+			//factoryPerson.push(ps);
+			//console.log('Person: - ' + person.id + '-, has been added');
+
+		}
+		function addNewofficedeskOccupied(oDOc) {
+			scene.add(oDOc.object);
+			objects.push(oDOc.object);
+			//factoryPerson.push(ps);
+			//console.log('oDOc: - ' + oDOc.id + '-, has been added');
+
+		}
+		function addNewofficedeskOccupiedFem(oDOcF) {
+			scene.add(oDOcF.object);
+			objects.push(oDOcF.object);
+			//factoryPerson.push(ps);
+			//console.log('oDOc: - ' + oDOc.id + '-, has been added');
+
+		}
 		//NOTE human json figure from blender and MakeHuman.org. KvL
 		function addNewOfficeMan(oMan) {
 			scene.add(oMan.object);
@@ -238,13 +307,36 @@
 			//console.log('Person: - ' + person.id + '-, has been added');
 
 		}
+		//NOTE human json figure from blender and MakeHuman.org. KvL
+		function addNewShopfloorFem(SfFem) {
+			scene.add(SfFem.object);
+			objects.push(SfFem.object);
+		}
+		//NOTE KvL toilet json from blender credits not required
+		function addNewToilet(loo) {
+			scene.add(loo.object);
+			objects.push(loo.object);
+			//factorytoilets.push(ps);
+			//console.log('toilet: - ' + toilet.id + '-, has been added');
 
-		//NOTE KvL forklift blender model credits not required!
-		function addNewForklift(fk) {
-			scene.add(fk.object);
-			objects.push(fk.object);
-			//factoryForklifts.push(ps);
-			//console.log('Forklift: - ' + forklift.id + '-, has been added');
+		}
+
+		//NOTE human json figure from blender and MakeHuman.org. KvL
+		function addNewOfficeFem(oFem) {
+			scene.add(oFem.object);
+			objects.push(oFem.object);
+			//factoryPerson.push(ps);
+			//console.log('Person: - ' + person.id + '-, has been added');
+
+		}
+
+		//NOTE human json figure from blender and MakeHuman.org. KvL
+		function addNewStandingGreySuit(GreyS) {
+			scene.add(GreyS.object);
+			objects.push(GreyS.object);
+			//factoryPerson.push(ps);
+			//console.log('Person: - ' + person.id + '-, has been added');
+
 		}
 		//NOTE KvL person blender model credits not required!
 		function addNewShopFloorPerson(sfp) {
@@ -252,10 +344,24 @@
 			objects.push(sfp.object);
 
 		}
-		//NOTE KvL person blender model credits not required!
+		//NOTE KvL forklift blender model credits not required!
+		function addNewForklift(fk) {
+			scene.add(fk.object);
+			objects.push(fk.object);
+			//factoryForklifts.push(ps);
+			//console.log('Forklift: - ' + forklift.id + '-, has been added');
+		}
+
+
+		//NOTE KvL  blender model credits not required!
 		function addNewBlueShelving(blueS) {
 			scene.add(blueS.object);
 			objects.push(blueS.object);
+
+		}
+		function addNewBlueShelvingBox(blueSBx) {
+			scene.add(blueSBx.object);
+			objects.push(blueSBx.object);
 
 		}
 		//NOTE KvL recycling bin blender model credits not required!
@@ -272,7 +378,22 @@
 			//console.log('toilet: - ' + toilet.id + '-, has been added');
 
 		}
+		//NOTE KvL toilet json from blender credits not required
+		function addNewurinal(Urin) {
+			scene.add(Urin.object);
+			objects.push(Urin.object);
+			//factorytoilets.push(ps);
+			//console.log('toilet: - ' + toilet.id + '-, has been added');
 
+		}
+		//NOTE KvL toilet json from blender credits not required
+		function addNewshopfloorAltMan(sfAltMan) {
+			scene.add(sfAltMan.object);
+			objects.push(sfAltMan.object);
+			//factorytoilets.push(ps);
+			//console.log('toilet: - ' + toilet.id + '-, has been added');
+
+		}
 		//NOTE KvL lorry blender model credits not required!
 		function addNewLorry(lry) {
 			scene.add(lry.object);
@@ -280,7 +401,12 @@
 			//factoryLorries.push(ps);
 			//console.log('Lorry: - ' + Lorry.id + '-, has been added');
 		}
-
+		function addNewVan(van) {
+			scene.add(van.object);
+			objects.push(van.object);
+			//factoryLorries.push(ps);
+			//console.log('Lorry: - ' + Lorry.id + '-, has been added');
+		}
 		function addNewWIP(id) {
 			var _newBox = createNewWIPObj(id);
 			factoryWIP.push(_newBox);
@@ -373,7 +499,7 @@
 		var marioHeight = 1.7 * meter;
 
 		function changeHeight() {
-			var _1stFloorHeight = 4.5 * meter;
+			var _1stFloorHeight = 4.7 * meter;
 			if (marioHeight == _1stFloorHeight) {
 				marioHeight = 1.7 * meter;
 			} else {
@@ -420,12 +546,22 @@
 						objects.push(_building[i]);
 					}
 					//4 desks in phoneRoom location is (x position, y position, Z position, rotation in y, id, addNewNamehere)
-					createWorkstation(-30.8 * meter, 0, 4 * meter, (-Math.PI / 2), '0_refurbD1', addNewStation);
-					createWorkstation(-30.8 * meter, 0, 8 * meter, (-Math.PI / 2), '0_refurbD2', addNewStation);
-					createWorkstation(-30.8 * meter, 0, 12 * meter, (-Math.PI / 2), '0_refurbD3', addNewStation);
-					createWorkstation(-30.8 * meter, 0, 0 * meter, (-Math.PI / 2), '0_refurbD4', addNewStation);
+					createWorkstation(-30* meter, 0, 4 * meter, 0, '0_refurbD1', addNewStation);
+					createWorkstation(-30 * meter, 0, 8 * meter, 0, '0_refurbD2', addNewStation);
+					createsfDeskBeard(-30 * meter, 0, 12 * meter, 0, '0_refurbD3', addNewsfdeskBeard);
+					createWorkstation(-30 * meter, 0, 0 * meter, 0, '0_refurbD4', addNewStation);
+
+					createBlueShelving(-28.2 * meter,0, 2 *meter, 0, '0_blueshelf1', addNewBlueShelving);
+					createBlueShelving(-28.2 * meter,0, 4 *meter, 0, '0_blueshelf2', addNewBlueShelving);
+					createBlueShelvingBox(-28.2 * meter,0, 8 *meter, 0, '0_blueshelft3', addNewBlueShelvingBox);
+					createBlueShelvingBox(-28.2 * meter,0, 6 *meter, 0, '0_blueshelft3', addNewBlueShelvingBox);
+
 					// desks in data erasure room
-					createWorkstation(-26.2 * meter, 0, 12 * meter, 0, '0_dataeraseD1', addNewStation);
+					createWorkstation(-26.5 * meter, 0, 12 * meter, 0, '0_dataeraseD1', addNewStation);
+					createBlueShelving(-27.2 * meter,0, 8 *meter, 0, '0_blueshelf1', addNewBlueShelving);
+					createBlueShelving(-27.2 * meter,0, 6 *meter, 0, '0_blueshelf2', addNewBlueShelving);
+					createBlueShelvingBox(-27.2 * meter,0, 4 *meter, 0, '0_blueshelft3', addNewBlueShelvingBox);
+					createBlueShelvingBox(-27.2 * meter,0, 2 *meter, 0, '0_blueshelft3', addNewBlueShelvingBox);
 					//recycling bins
 					createRecycleBin(-10 * meter, 0, 12 * meter, 0, '0_bin1', addNewrecycleBin);
 					createRecycleBin(-12 * meter, 0, 12 * meter, 0, '0_bin1', addNewrecycleBin);
@@ -435,40 +571,39 @@
 					createRecycleBin(-12 * meter, 0, 10 * meter, 0, '0_bin1', addNewrecycleBin);
 					createRecycleBin(-14 * meter, 0, 10 * meter, 0, '0_bin1', addNewrecycleBin);
 					createRecycleBin(-16 * meter, 0, 10 * meter, 0, '0_bin1', addNewrecycleBin);
-					createShopFloorPerson(-10 * meter, 0, 13.5 * meter, 0, '0_shopfloorBluemanBin1', addNewShopFloorPerson);
-
+					createShopFloorPerson(-10 * meter, 0, 13.3 * meter, 0, '0_shopfloorBluemanBin1', addNewShopFloorPerson);
+					createshopfloorAltMan(-12 * meter, 0, 13.3 * meter, 0, '0_shopfloorAltMan1atBin2', addNewshopfloorAltMan);
 
 					//NOTE CAN ONLY BE ADDED WHERE THERE ARE NO UPSTAIRS OR IT CAUSES A CLASH (uniforms.specular.value = material.specular;) shelving
 					// stores - not secure, top wall 3 shelves.
-					createBlueShelving(12.2 * meter,0, 32.2 *meter, 0, '0_blueshelftest', addNewBlueShelving);
-					createBlueShelving(12.2 * meter,0, 35.2 *meter, 0, '0_blueshelftest', addNewBlueShelving);
-					createBlueShelving(12.2 * meter,0, 38.2 *meter, 0, '0_blueshelftest', addNewBlueShelving);
+					createBlueShelving(12.2 * meter,0, 32.2 *meter, 0, '0_blueshelf1', addNewBlueShelving);
+					createBlueShelving(12.2 * meter,0, 35.2 *meter, 0, '0_blueshelf2', addNewBlueShelving);
+					createBlueShelving(12.2 * meter,0, 38.2 *meter, 0, '0_blueshelft3', addNewBlueShelving);
 					// stores - not secure, outer wall
-					createBlueShelving(10 * meter,0, 40 *meter, (-Math.PI / 2), '0_blueshelftest', addNewBlueShelving);
-					createBlueShelving(7* meter,0, 40 *meter, (-Math.PI / 2), '0_blueshelftest', addNewBlueShelving);
-					createBlueShelving(4 * meter,0, 40 *meter, (-Math.PI / 2), '0_blueshelftest', addNewBlueShelving);
-					createBlueShelving(1 * meter,0, 40 *meter, (-Math.PI / 2), '0_blueshelftest', addNewBlueShelving);
-					createBlueShelving(-2 * meter,0, 40 *meter, (-Math.PI / 2), '0_blueshelftest', addNewBlueShelving);
-					createBlueShelving(-5 * meter,0, 40 *meter, (-Math.PI / 2), '0_blueshelftest', addNewBlueShelving);
+					createBlueShelving(10 * meter,0, 40 *meter, (-Math.PI / 2), '0_blueshelf4', addNewBlueShelving);
+					createBlueShelving(7* meter,0, 40 *meter, (-Math.PI / 2), '0_blueshelf5', addNewBlueShelving);
+					createBlueShelving(4 * meter,0, 40 *meter, (-Math.PI / 2), '0_blueshel6', addNewBlueShelving);
+					createBlueShelving(1 * meter,0, 40 *meter, (-Math.PI / 2), '0_blueshelf7', addNewBlueShelving);
+					createBlueShelving(-2 * meter,0, 40 *meter, (-Math.PI / 2), '0_blueshelf8', addNewBlueShelving);
+					createBlueShelving(-5 * meter,0, 40 *meter, (-Math.PI / 2), '0_blueshelf9', addNewBlueShelving);
 					// stores - not secure,centre shelving racks
-					createBlueShelving(9 * meter,0, 32.2 *meter, 0, '0_blueshelftest', addNewBlueShelving);
-					createBlueShelving(9 * meter,0, 35.2 *meter, 0, '0_blueshelftest', addNewBlueShelving);
-					createBlueShelving(6 * meter,0, 32.2 *meter, 0, '0_blueshelftest', addNewBlueShelving);
-					createBlueShelving(6 * meter,0, 35.2 *meter, 0, '0_blueshelftest', addNewBlueShelving);
-					createBlueShelving(3 * meter,0, 32.2 *meter, 0, '0_blueshelftest', addNewBlueShelving);
-					createBlueShelving(3 * meter,0, 35.2 *meter, 0, '0_blueshelftest', addNewBlueShelving);
-					createBlueShelving(0 * meter,0, 32.2 *meter, 0, '0_blueshelftest', addNewBlueShelving);
-					createBlueShelving(0 * meter,0, 35.2 *meter, 0, '0_blueshelftest', addNewBlueShelving);
+					createBlueShelving(9 * meter,0, 32.2 *meter, 0, '0_blueshelf10', addNewBlueShelving);
+					createBlueShelving(9 * meter,0, 35.2 *meter, 0, '0_blueshelf11', addNewBlueShelving);
+					createBlueShelving(6 * meter,0, 32.2 *meter, 0, '0_blueshelf12', addNewBlueShelving);
+					createBlueShelving(6 * meter,0, 35.2 *meter, 0, '0_blueshelf13', addNewBlueShelving);
+					createBlueShelving(3 * meter,0, 32.2 *meter, 0, '0_blueshelf14', addNewBlueShelving);
+					createBlueShelving(3 * meter,0, 35.2 *meter, 0, '0_blueshelf15', addNewBlueShelving);
+					createBlueShelving(0 * meter,0, 32.2 *meter, 0, '0_blueshelf16', addNewBlueShelving);
+					createBlueShelving(0 * meter,0, 35.2 *meter, 0, '0_blueshelf17', addNewBlueShelving);
 					//stores - not secure,shelving to right of door
-					createBlueShelving(-5 * meter,0, 32.2 *meter, (-Math.PI / 2), '0_blueshelftest', addNewBlueShelving);
-
+					createBlueShelving(-5 * meter,0, 32.2 *meter, (-Math.PI / 2), '0_blueshelf18', addNewBlueShelving);
+					createShopfloorFem(4 * meter, 0, 33 * meter, 0,(-Math.PI / 2), '0_ShopfloorFem1', addNewShopfloorFem);
 					//stores secure cage
-					createBlueShelving(-9.2 * meter,0, 40 *meter, (-Math.PI / 2), '0_blueshelftest', addNewBlueShelving);
-					createBlueShelving(-12.2 * meter,0, 40 *meter, (-Math.PI / 2), '0_blueshelftest', addNewBlueShelving);
-					createBlueShelving(-15.2 * meter,0, 40 *meter, (-Math.PI / 2), '0_blueshelftest', addNewBlueShelving);
-					//shopfloor person refurbRoom
-					//createOfficePerson(-29 * meter, 0, 6 * meter, 0, '0_person1', addNewOfficePerson);
-					createShopFloorPerson(-25 * meter, 0, 6 * meter, 0, '0_shopfloorperson1', addNewShopFloorPerson);
+					createBlueShelving(-9.2 * meter,0, 40 *meter, (-Math.PI / 2), '0_blueshelf19', addNewBlueShelving);
+					createBlueShelving(-12.2 * meter,0, 40 *meter, (-Math.PI / 2), '0_blueshelf20', addNewBlueShelving);
+					createBlueShelving(-15.2 * meter,0, 40 *meter, (-Math.PI / 2), '0_blueshelf21', addNewBlueShelving);
+					//shopfloor person stores
+					createShopfloorFem(10 * meter, 0, 33 * meter, 0, '0_shopfloorperson1', addNewShopfloorFem);
 
 					//blue shelving refurbRoom
 					//createBlueShelving(-28 * meter, 0, 6 * meter, 0, '0_shelving1', addNewBlueShelving);
@@ -476,7 +611,8 @@
 					createForklift(-18 * meter, 0, -30 * meter, (-Math.PI / 2), '0_forklift1', addNewForklift);
 					// lorry in bay 1
 					createLorry(23 * meter, 0, -31.5 * meter, (-Math.PI / 2), '0_lorryBay1', addNewLorry);
-
+					//van in bay 2
+					createVan(14 * meter, 0, -35.5* meter, (-Math.PI/ 2), '0_vanBay2', addNewVan);
 					//toilets accessed from shopfloor
 					createToilet(-28.5 * meter, 0, 26.5 * meter, (-Math.PI / 2), '0_toiletShopfloor1', addNewToilet);
 					createToilet(-28.5 * meter, 0, 27.5 * meter, (-Math.PI / 2), '0_toiletShopfloor2', addNewToilet);
@@ -487,15 +623,36 @@
 
 
 					//toilets accessed from lobby
-					createToilet(-21 * meter, 0, 36.5 * meter, 0, '0_toiletlobby1', addNewToilet);
-					createToilet(-22 * meter, 0, 36.5 * meter, 0, '0_toiletlobby2', addNewToilet);
-					createToilet(-23 * meter, 0, 36.5 * meter, 0, '0_toiletlobby3', addNewToilet);
+					createToilet(-23* meter, 0* meter, 36.2 * meter, (-Math.PI), '0_toiletlobby1', addNewurinal);
+					createurinal(-21 * meter, 0.7* meter, 36.2 * meter, (Math.PI/2), '0_toiletlobby2', addNewurinal);
+					createurinal(-22 * meter, 0.7* meter, 36.2 * meter, (Math.PI/2), '0_toiletlobby3', addNewurinal);
 					createToilet(-19.5 * meter, 0, 33.5 * meter, (-Math.PI), '0_toiletlobby4', addNewToilet);
 					createToilet(-20.5 * meter, 0, 33.5 * meter, (-Math.PI), '0_toiletlobby5', addNewToilet);
 					createToilet(-21.5 * meter, 0, 33.5 * meter, (-Math.PI), '0_toiletlobby6', addNewToilet);
 
 					//first floor characters
-					createOfficeMan(-25 * meter, 3.3* meter, 4* meter, 0, '0_officeMan_Manager1', addNewOfficeMan);
+					createOfficeMan(-25 * meter, 3* meter, 4* meter, 0, '1_officeMan_Manager1', addNewOfficeMan);
+					createOfficeFem(-24 * meter, 3* meter, 15* meter, 0, '1_officeFem_1', addNewOfficeFem);
+
+					//office desk manager office floor 1
+					createOfficeDeskPC(-24 * meter, 3* meter, 1.5* meter, 0, '1_officeDeskPC_manager1', addNewOfficeDeskPC);
+// office desks main room
+					createOfficeDeskPC(-24 * meter, 3* meter, 12* meter, 0, '1_officeDeskPC_sales1', addNewOfficeDeskPC);
+
+					createOfficeDeskPC(-24 * meter, 3* meter, 6.5* meter, (-Math.PI / 2), '1_officeDeskPC_sales1', addNewOfficeDeskPC);
+
+					createOfficeDeskOccupied(-24 * meter, 3* meter, 20* meter, 0, '1_officeDeskPC_sales1', addNewofficedeskOccupied);
+
+
+
+					createOfficeDeskPC(-24 * meter, 3* meter, 24* meter, 0, '1_officeDeskPC_sales1', addNewOfficeDeskPC);
+
+					//office desk main room rotated 90 degrees
+					createOfficeDeskOccupiedFem(-30* meter, 3* meter, 1.5* meter, (-Math.PI / 2), '1_officeFem_desk1', addNewofficedeskOccupiedFem);
+					createOfficeDeskPC(-30* meter, 3* meter, 14* meter, (-Math.PI / 2), '1_officeFem_desk1', addNewOfficeDeskPC);
+					createOfficeDeskPC(-30* meter, 3* meter, 18* meter, (-Math.PI / 2), '1_officeFem_desk1', addNewOfficeDeskPC);
+					createOfficeDeskPC(-30* meter, 3* meter, 22* meter, (-Math.PI / 2), '1_officeFem_desk1', addNewOfficeDeskPC);
+					createOfficeDeskPC(-30* meter, 3* meter, 28* meter, (-Math.PI / 2), '1_officeFem_desk1', addNewOfficeDeskPC);
 
 					renderer = new THREE.WebGLRenderer();
 					renderer.setClearColor(0xffffff);
